Storage setitem and deleteitem, sessionstorage attribute on window, updated test expectations

--- a/tests/wpt/metadata/webstorage/storage_session_key.html.ini
+++ b/tests/wpt/metadata/webstorage/storage_session_key.html.ini
@@ -1,5 +1,26 @@
 [storage_session_key.html]
   type: testharness
-  [Web Storage]
+  [key(0) should return the right thing.]
+    expected: FAIL
+
+  [key(4294967296) should return the right thing.]
+    expected: FAIL
+
+  [key(1) should return the right thing.]
+    expected: FAIL
+
+  [key(4294967297) should return the right thing.]
+    expected: FAIL
+
+  [key(2) should return the right thing.]
+    expected: FAIL
+
+  [key(4294967298) should return the right thing.]
+    expected: FAIL
+
+  [key(3) should return the right thing.]
+    expected: FAIL
+
+  [key(4294967299) should return the right thing.]
     expected: FAIL
 
