--- a/tests/wpt/metadata/webstorage/storage_session_setitem_js.html.ini
+++ b/tests/wpt/metadata/webstorage/storage_session_setitem_js.html.ini
@@ -1,5 +1,41 @@
 [storage_session_setitem_js.html]
   type: testharness
-  [Web Storage]
+  [Web Storage 2]
+    expected: FAIL
+
+  [Web Storage 3]
+    expected: FAIL
+
+  [Web Storage 4]
+    expected: FAIL
+
+  [Web Storage 5]
+    expected: FAIL
+
+  [Web Storage 6]
+    expected: FAIL
+
+  [Web Storage 7]
+    expected: FAIL
+
+  [Web Storage 8]
+    expected: FAIL
+
+  [Web Storage 9]
+    expected: FAIL
+
+  [Web Storage 10]
+    expected: FAIL
+
+  [Web Storage 11]
+    expected: FAIL
+
+  [Web Storage 12]
+    expected: FAIL
+
+  [Web Storage 13]
+    expected: FAIL
+
+  [Web Storage 14]
     expected: FAIL
 
