--- a/tests/wpt/metadata/webstorage/storage_session_getitem_js.html.ini
+++ b/tests/wpt/metadata/webstorage/storage_session_getitem_js.html.ini
@@ -1,5 +1,11 @@
 [storage_session_getitem_js.html]
   type: testharness
-  [Web Storage]
+  [All 3 items should be added.]
+    expected: FAIL
+
+  [array access should be correct]
+    expected: FAIL
+
+  [getItem should be correct]
     expected: FAIL
 
